<resources>
    <string name="app_name">Car Dealership</string>
    <string name="title_login">Welcome Back</string>
    <string name="title_register">Create Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Sign Up</string>
    <string name="text_no_account">Don\'t have an account? Sign up</string>
    <string name="text_has_account">Already have an account? Log in</string>
    <string name="loading">Loading...</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_passwords_match">Passwords do not match</string>
    <string name="error_login_failed">Invalid username or password</string>
    <string name="error_username_taken">Username already exists</string>
    <string name="success_registration">Account created successfully</string>
    <string name="success_login">Login successful</string>
    <string name="role_admin">Admin</string>
    <string name="role_sales">Sales Staff</string>
    <string name="btn_logout">Log Out</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="section_featured">Featured Cars</string>
    <string name="btn_view_all">View All</string>
    <string name="currency">$</string>
    <string name="title_purchase_history">Your Garage</string>
    <string name="no_history">You haven\'t bought any cars yet.</string>
    <string name="purchased_on">Purchased on: %s</string>
    <string name="profile_settings">Settings</string>
    <string name="action_theme">Change Theme</string>
    <string name="action_language">Language</string>
    <string name="action_policies">Policies &amp; Terms</string>
    <string name="action_logout">Log Out</string>
    <string name="spec_manufacturer">Make</string>
    <string name="spec_model">Model</string>
    <string name="spec_year">Year</string>
    <string name="spec_price">Price</string>
    <string name="spec_mileage">Mileage</string>
    <string name="spec_transmission">Transmission</string>
    <string name="spec_condition">Condition</string>
    <string name="spec_vin">VIN</string>
    <string name="description">Description</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="msg_confirm_buy">Confirm purchase of %s?</string>
    <string name="msg_buy_success">Congratulations! You own this car.</string>
    <string name="hint_national_id">National ID</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="all_cars">All Cars</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_mileage">Mileage</string>
    <string name="lbl_transmission">Transmission</string>
    <string name="lbl_fuel">Fuel Type</string>
    <string name="lbl_vin" translatable="false">VIN</string>
    <string name="lbl_description">Description</string>
    <string name="btn_sold">Sold Out</string>
    <string name="msg_purchase_success">Congratulations! Car purchased successfully.</string>
    <string name="msg_purchase_fail">Purchase failed. Car may be unavailable.</string>
    <string name="unit_km">km</string>
</resources>